--- a/ZooAPI.csproj
+++ b/ZooAPI.csproj
@@ -4,13 +4,24 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.OpenApi" Version="1.6.5" />
-      <PackageReference Include="MySql.Data" Version="8.1.0" />
-      <PackageReference Include="MySqlConnector" Version="2.2.7" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="Microsoft.OpenApi" Version="1.6.6" />
+        <PackageReference Include="MySql.Data" Version="8.1.0" />
+        <PackageReference Include="MySqlConnector" Version="2.2.7" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="frontend\src\assets\" />
+    </ItemGroup>
+
+
+
+
+
 
 </Project>
